# august-native-manager

./: Cargo.toml  README.md
src/: config.rs  ffi.rs  lib.rs  manager.rs  plugin.rs
tests/: main.rs  utils.rs
