[package]
name = "august_native_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
august-plugin-system = { git="https://github.com/BleynChannel/august-plugin-system.git", branch="master" }
libloading = "0.8.0"
semver = "1.0.18"
serde = "1.0.162"
thiserror = "1.0.40"
toml = "0.7.3"
