[package]
name = "august-native-manager"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.8"
semver = "1.0.26"
serde = "1.0.219"
thiserror = "2.0.16"
toml = "0.9.5"
plux-rs = "1.0.0-pre.1"